# cppimagefilterbase

./: .gitignore  CMakeLists.txt  CMakeSettings.json  filters.cpp  filters.h  main.cpp  manager_filters.cpp  manager_filters.h  png_toolkit.cpp  png_toolkit.h  rectangleArea.h  rectangle_area.cpp  secondary_functions.cpp  secondary_functions.h
